<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/major_currency_rate"
            android:title="@string/major_currency_rate_title"
            android:icon="@drawable/icon_money"/>
        <item
            android:id="@+id/rate_dynamics_graphic"
            android:title="@string/rate_dynamics_graphic_title"
            android:icon="@drawable/icon_chart"/>
        <item
            android:id="@+id/particular_date_rate"
            android:title="@string/particular_date_rate_title"
            android:icon="@drawable/icon_calendar"/>
        <item
            android:id="@+id/metals_rate"
            android:title="@string/metals_rate_title"
            android:icon="@drawable/icon_gold_bars"/>
        <item
            android:id="@+id/currency_calculator"
            android:title="@string/currency_calculator_title"
            android:icon="@drawable/icon_calculator"/>
        <item
            android:id="@+id/favorite_currency"
            android:title="@string/favorite_currency_title"
            android:icon="@drawable/icon_heart"/>
        <item
            android:id="@+id/about_app"
            android:title="@string/about_app_title"
            android:icon="@drawable/icon_info"/>
    </group>

</menu>
