<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/metal_name_tv"
            android:layout_width="151dp"
            android:textSize="20sp"
            android:text="@string/metal_name"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/metal_scale_tv"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/metal_scale"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/metal_rate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metal_rate"
            android:textSize="20sp"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingots_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="511dp"
        android:scrollbars="vertical" >
    </android.support.v7.widget.RecyclerView>

</LinearLayout>